--- a/hello.html
+++ b/hello.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous">
   </head>
   <link rel:"stylesheet" type="text/css" href="main.css">
+  <link rel:"stylesheet" type="text/css" href="sub.css">
   <body>
     <main>
     <h1>안녕하세요</h1>
